# tagstore/api/v1/views/entities.py
@@ -32,11 +32,12 @@ class EntityViewSet(viewsets.GenericViewSet):
     external systems, and Tagstore really has no idea about what entities do or
     do not exist.)
     '''
+    # pylint: disable=unused-argument
     queryset = Entity.objects.all()
     serializer_class = EntitySerializer
 
     @swagger_auto_schema(auto_schema=None)  # Exclude from API Specification
-    def list(self, request, *args, **kwargs):  # pylint: disable=unused-argument
+    def list(self, request, *args, **kwargs):
         """
         Listing entities is generally not going to be performant, so is not
         supported by this API. Since entities are so varied and represent
@@ -53,7 +54,7 @@ class EntityViewSet(viewsets.GenericViewSet):
         return Response([])
 
     @api_method(EntityDetailSerializer(), operation_id="get_entity")
-    def retrieve_entity(self, request, pk=None, entity_type=None):  # pylint: disable=unused-argument
+    def retrieve_entity(self, request, entity_type, external_id):
         '''
         Get a single entity. Never raises a 404, because Tagstore doesn't know
         which entities exist or not. If you want to know whether or not the
@@ -61,13 +62,13 @@ class EntityViewSet(viewsets.GenericViewSet):
         "persisted" boolean field.
         '''
         try:
-            entity = Entity.objects.get(external_id=pk, entity_type=entity_type)
+            entity = Entity.objects.get(external_id=external_id, entity_type=entity_type)
         except Entity.DoesNotExist:
-            entity = Entity(external_id=pk, entity_type=entity_type)
+            entity = Entity(external_id=external_id, entity_type=entity_type)
         return entity
 
     @api_method(TagSerializer(exclude_parent=True), operation_id="entity_has_tag")
-    def entity_has_tag(self, request, pk, entity_type, taxonomy_id, tag_name):  # pylint: disable=unused-argument
+    def entity_has_tag(self, request, entity_type, external_id, taxonomy_id, tag_name):
         """
         Does this entity have the given tag?
         Use this if you need to check if an entity has one specific tag, as it
@@ -75,7 +76,7 @@ class EntityViewSet(viewsets.GenericViewSet):
         Raises 404 if the tag does not exist.
         """
         try:
-            entity = Entity.objects.get(external_id=pk, entity_type=entity_type)
+            entity = Entity.objects.get(external_id=external_id, entity_type=entity_type)
         except Entity.DoesNotExist:
             raise NotFound("Entity has no tags")
         try:
@@ -84,7 +85,7 @@ class EntityViewSet(viewsets.GenericViewSet):
             raise NotFound("Entity does not have that tag")
 
     @api_method(TagSerializer(exclude_parent=True), request_body=no_body, operation_id="add_tag_to_entity")
-    def entity_add_tag(self, request, pk, entity_type, taxonomy_id, tag_name):  # pylint: disable=unused-argument
+    def entity_add_tag(self, request, entity_type, external_id, taxonomy_id, tag_name):
         """
         Add the given tag to the entity. The entity will be auto-created if it
         isn't yet tracked (persisted) in Tagstore's database.
@@ -96,11 +97,11 @@ class EntityViewSet(viewsets.GenericViewSet):
             tag = Tag.objects.get(taxonomy_id=taxonomy_id, name=tag_name)
         except Tag.DoesNotExist:
             raise NotFound("Tag does not exist")
-        tag.add_to(EntityId(external_id=pk, entity_type=entity_type))
+        tag.add_to(EntityId(external_id=external_id, entity_type=entity_type))
         return tag
 
     @api_method(EmptyObjectSerializer(), operation_id="remove_tag_from_entity")
-    def entity_remove_tag(self, request, pk, entity_type, taxonomy_id, tag_name):  # pylint: disable=unused-argument
+    def entity_remove_tag(self, request, entity_type, external_id, taxonomy_id, tag_name):
         """
         Remove the given tag from the entity.
 
@@ -117,5 +118,5 @@ class EntityViewSet(viewsets.GenericViewSet):
             tag = Tag.objects.get(taxonomy_id=taxonomy_id, name=tag_name)
         except Tag.DoesNotExist:
             raise NotFound("Tag does not exist")
-        tag.remove_from(EntityId(external_id=pk, entity_type=entity_type))
+        tag.remove_from(EntityId(external_id=external_id, entity_type=entity_type))
         return {}
